k8s/exercises-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercises-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exerciseservice
  template:
    metadata:
      labels:
        app: exerciseservice
    spec:
      containers:
      - name: exerciseservice
        image: irchubarkina/exerciseservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: exercises-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: exerciseservice
  ports:
  - name: exerciseservice
    protocol: TCP
    port: 80
    targetPort: 80
