k8s/exercises-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exercisenpservice-srv
spec:
  type: NodePort
  selector:
    app: exerciseservice
  ports:
  - name: exerciseservice
    protocol: TCP
    port: 80
    targetPort: 80
