k8s/galleries-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gallerynpservice-srv
spec:
  type: NodePort
  selector:
    app: galleryservice
  ports:
  - name: galleryservice
    protocol: TCP
    port: 80
    targetPort: 80
